--- a/index.html
+++ b/index.html
@@ -3,68 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Display CSV from S3</title>
+    <title>Lambda API Call</title>
     <style>
-        table {
-            width: 100%;
-            border-collapse: collapse;
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
         }
-        th, td {
-            padding: 8px;
+        #response {
+            margin-top: 20px;
+            white-space: pre-wrap; /* Preserve whitespace and line breaks */
+            background-color: #f4f4f4;
+            padding: 10px;
+            border-radius: 5px;
             border: 1px solid #ddd;
-            text-align: left;
+        }
+        button {
+            padding: 10px 15px;
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
-<body onload="fetchCSVData()">
-    <h1>CSV Data</h1>
-    <table id="csvTable">
-        <thead>
-            <tr>
-                <th>Employee Name</th>
-                <th>Task Description</th>
-                <th>Start Date</th>
-                <th>End Date</th>
-                <th>Remarks</th>
-            </tr>
-        </thead>
-        <tbody id="csvBody">
-            <!-- CSV Data will be inserted here -->
-        </tbody>
-    </table>
+<body>
+    <h1>Call AWS Lambda Endpoint</h1>
+    <button onclick="callLambda()">Call Lambda</button>
+    <div id="response"></div>
 
     <script>
-        async function fetchCSVData() {
-            try {
-                const response = await fetch(' https://0cyyhx4ika.execute-api.ap-south-1.amazonaws.com/S1/deepshikatest123');
-                
-                if (!response.ok) {
-                    throw new Error(`HTTP error! Status: ${response.status}`);
-                }
-                
-                const data = await response.json();
-                const tableBody = document.getElementById('csvBody');
+        function callLambda() {
+            const responseDiv = document.getElementById('response');
+            responseDiv.textContent = 'Loading...';
 
-                if (data.length === 0) {
-                    tableBody.innerHTML = '<tr><td colspan="5">No data found</td></tr>';
-                    return;
-                }
-
-                data.forEach(row => {
-                    const tr = document.createElement('tr');
-                    tr.innerHTML = `
-                        <td>${row.EmployeeName || 'N/A'}</td>
-                        <td>${row.TaskDescription || 'N/A'}</td>
-                        <td>${row.StartDate || 'N/A'}</td>
-                        <td>${row.EndDate || 'N/A'}</td>
-                        <td>${row.Remarks || 'N/A'}</td>
-                    `;
-                    tableBody.appendChild(tr);
+            fetch('https://0cyyhx4ika.execute-api.ap-south-1.amazonaws.com/S1/deepshikatest123')
+                .then(response => response.json())
+                .then(data => {
+                    responseDiv.textContent = JSON.stringify(data, null, 2); // Pretty-print JSON
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    responseDiv.textContent = 'An error occurred: ' + error.message;
                 });
-            } catch (error) {
-                console.error('Error:', error);
-                document.getElementById('csvBody').innerHTML = '<tr><td colspan="5">Error fetching the CSV data</td></tr>';
-            }
         }
     </script>
 </body>
