--- a/index.html
+++ b/index.html
@@ -29,5 +29,6 @@
 </head>
 <body onload="onLoadFunction()">
     <h1>Fetch Data from Lambda</h1>
+    <div id="data-container">Loading data...</div>
 </body>
 </html>
