--- a/index.html
+++ b/index.html
@@ -61,17 +61,29 @@
         }
     </style>
 </head>
-<body onload="onLoadFunction()">
-    <h1>Fetch Data from Lambda</h1>
-    <div id="data-container">Loading data...</div>
-
+<body>
+    <h2>Task Manager</h2>
+    <table id="taskTable">
+        <thead>
+            <tr>
+                <th>Employee</th>
+                <th>Task</th>
+                <th>Start Date</th>
+                <th>End Date</th>
+                <th>Remarks</th>
+            </tr>
+        </thead>
+        <tbody id="taskTableBody">
+            <!-- Existing tasks will be displayed here -->
+        </tbody>
+    </table>
     <br>
     <button class="button" onclick="showPopup()">Add Task</button>
 
     <!-- Popup for adding tasks -->
     <div id="popup" class="popup">
         <h3>Add New Task</h3>
-        <form action="https://tfyct2zj8k.execute-api.ap-south-1.amazonaws.com/A1/test3" method="POST" enctype="application/x-www-form-urlencoded">
+        <form id="taskForm" action="https://tfyct2zj8k.execute-api.ap-south-1.amazonaws.com/A1/test3" method="POST" enctype="application/x-www-form-urlencoded">
             <label for="employeeName">Employee Name:</label>
             <input type="text" id="employeeName" name="eName" value="Ramita" required><br><br>
 
@@ -95,29 +107,13 @@
     <!-- Overlay for popup -->
     <div id="overlay" class="overlay" onclick="closePopup()"></div>
 
+    <!-- Success message popup -->
+    <div id="messagePopup" class="popup">
+        <p id="messageContent"></p>
+        <button class="button" onclick="closeMessagePopup()">Close</button>
+    </div>
+
     <script>
-
-        function onLoadFunction() {
-            console.log("Page has loaded.");
-            fetchDataFromLambda();
-        }
-
-        function fetchDataFromLambda() {
-            const apiUrl = 'https://0cyyhx4ika.execute-api.ap-south-1.amazonaws.com/S1/deepshikatest123';
-
-            fetch(apiUrl)
-                .then(response => response.text())  // Use .text() to handle HTML response
-                .then(data => {
-                    console.log("Fetched HTML data:", data);
-                    document.getElementById('data-container').innerHTML = data;  // Insert HTML into the container
-                })
-                .catch(error => {
-                    console.error('Error fetching data:', error);
-                    const container = document.getElementById('data-container');
-                    container.innerHTML = 'Failed to load data. Please check the console for details.';
-                });
-        }
-
         function showPopup() {
             document.getElementById('popup').style.display = 'block';
             document.getElementById('overlay').style.display = 'block';
@@ -127,6 +123,40 @@
             document.getElementById('popup').style.display = 'none';
             document.getElementById('overlay').style.display = 'none';
         }
+
+        function closeMessagePopup() {
+            document.getElementById('messagePopup').style.display = 'none';
+            document.getElementById('overlay').style.display = 'none';
+        }
+
+        document.getElementById('taskForm').onsubmit = async function(event) {
+            event.preventDefault(); // Prevent the default form submission
+
+            const form = event.target;
+            const formData = new FormData(form);
+            const params = new URLSearchParams(formData).toString();
+
+            try {
+                const response = await fetch(form.action, {
+                    method: form.method,
+                    headers: {
+                        'Content-Type': form.enctype
+                    },
+                    body: params
+                });
+
+                const result = await response.json();
+                document.getElementById('messageContent').innerText = result.message;
+                document.getElementById('messagePopup').style.display = 'block';
+                document.getElementById('overlay').style.display = 'block';
+
+                closePopup(); // Close the add task popup
+            } catch (error) {
+                document.getElementById('messageContent').innerText = 'Error: ' + error.message;
+                document.getElementById('messagePopup').style.display = 'block';
+                document.getElementById('overlay').style.display = 'block';
+            }
+        };
     </script>
 </body>
 </html>
