--- a/index.html
+++ b/index.html
@@ -61,29 +61,17 @@
         }
     </style>
 </head>
-<body>
-    <h2>Task Manager</h2>
-    <table id="taskTable">
-        <thead>
-            <tr>
-                <th>Employee</th>
-                <th>Task</th>
-                <th>Start Date</th>
-                <th>End Date</th>
-                <th>Remarks</th>
-            </tr>
-        </thead>
-        <tbody id="taskTableBody">
-            <!-- Existing tasks will be displayed here -->
-        </tbody>
-    </table>
+<body onload="onLoadFunction()">
+    <h1>Fetch Data from Lambda</h1>
+    <div id="data-container">Loading data...</div>
+
     <br>
     <button class="button" onclick="showPopup()">Add Task</button>
 
     <!-- Popup for adding tasks -->
     <div id="popup" class="popup">
         <h3>Add New Task</h3>
-        <form id="taskForm" action="https://tfyct2zj8k.execute-api.ap-south-1.amazonaws.com/A1/test3" method="POST" enctype="application/x-www-form-urlencoded">
+        <form action="https://tfyct2zj8k.execute-api.ap-south-1.amazonaws.com/A1/test3" method="POST" enctype="application/x-www-form-urlencoded">
             <label for="employeeName">Employee Name:</label>
             <input type="text" id="employeeName" name="eName" value="Ramita" required><br><br>
 
@@ -107,14 +95,30 @@
     <!-- Overlay for popup -->
     <div id="overlay" class="overlay" onclick="closePopup()"></div>
 
-    <!-- Success message popup -->
-    <div id="messagePopup" class="popup">
-        <p id="messageContent"></p>
-        <button class="button" onclick="closeMessagePopup()">Close</button>
-    </div>
-
     <script>
-        function showPopup() {
+
+        function onLoadFunction() {
+            console.log("Page has loaded.");
+            fetchDataFromLambda();
+        }
+
+        function fetchDataFromLambda() {
+            const apiUrl = 'https://0cyyhx4ika.execute-api.ap-south-1.amazonaws.com/S1/deepshikatest123';
+
+            fetch(apiUrl)
+                .then(response => response.text())  // Use .text() to handle HTML response
+                .then(data => {
+                    console.log("Fetched HTML data:", data);
+                    document.getElementById('data-container').innerHTML = data;  // Insert HTML into the container
+                })
+                .catch(error => {
+                    console.error('Error fetching data:', error);
+                    const container = document.getElementById('data-container');
+                    container.innerHTML = 'Failed to load data. Please check the console for details.';
+                });
+        }
+
+               function showPopup() {
             document.getElementById('popup').style.display = 'block';
             document.getElementById('overlay').style.display = 'block';
         }
@@ -157,6 +161,7 @@
                 document.getElementById('overlay').style.display = 'block';
             }
         };
+
     </script>
 </body>
 </html>
