--- a/index.html
+++ b/index.html
@@ -95,6 +95,14 @@
     <!-- Overlay for popup -->
     <div id="overlay" class="overlay" onclick="closePopup()"></div>
 
+
+        <!-- Success message popup -->
+    <div id="messagePopup" class="popup">
+        <p id="messageContent"></p>
+        <button class="button" onclick="closeMessagePopup()">Close</button>
+    </div>
+
+
     <script>
 
         function onLoadFunction() {
