--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </style>
 </head>
 <body onload="onLoadFunction()">
-    <h1>Fetch Data from Lambda</h1>
+    <h1>Employee Task List</h1>
     <div id="data-container">Loading data...</div>
 
     <br>
