--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 remarks: mainRow.cells[4].innerText
             };
 
-            const apiUrl = 'https://c9tmoc2s08.execute-api.ap-south-1.amazonaws.com/default/Test4RT';
+            const apiUrl = 'https://eujo3ulg06.execute-api.ap-south-1.amazonaws.com/default/Test4RT';
 
             fetch(apiUrl, {
                 method: 'POST',
