--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 task: row.cells[1].innerText
             };
 
-            const apiUrl = 'https://eujo3ulg06.execute-api.ap-south-1.amazonaws.com/default/Test4RT'; // Replace with your API Gateway URL
+            const apiUrl = 'https://6z4vzlu3hb.execute-api.ap-south-1.amazonaws.com/default/Test4RT'; // Replace with your API Gateway URL
 
             fetch(apiUrl, {
                 method: 'POST',
