--- a/index.html
+++ b/index.html
@@ -23,6 +23,44 @@
         th {
             background-color: #f4f4f4;
         }
+        .button {
+            padding: 10px 15px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            cursor: pointer;
+        }
+        .button:hover {
+            background-color: #45a049;
+        }
+        .popup {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 20px;
+            border: 1px solid #ccc;
+            background-color: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            z-index: 1000;
+            max-width: 80%;
+            max-height: 80%;
+            overflow-y: auto;
+        }
+        .popup button {
+            margin-top: 10px;
+        }
+        .overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 999;
+        }
         .remove-btn {
             color: red;
             border: none;
@@ -33,39 +71,123 @@
         }
     </style>
 </head>
-<body>
+<body onload="onLoadFunction()">
     <h1>Employee Task List</h1>
-    <table id="taskTable">
-        <thead>
-            <tr>
-                <th>Employee</th>
-                <th>Task</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr data-task-id="1">
-                <td>John Doe</td>
-                <td>Complete Project A</td>
-                <td><button class="remove-btn" onclick="removeTask(1)">&times;</button></td>
-            </tr>
-            <tr data-task-id="2">
-                <td>Jane Smith</td>
-                <td>Submit Report</td>
-                <td><button class="remove-btn" onclick="removeTask(2)">&times;</button></td>
-            </tr>
-        </tbody>
-    </table>
+    <div id="data-container">Loading data...</div>
+
+    <br>
+    <button class="button" onclick="showPopup()">Edit Task</button>
+
+    <div id="popup" class="popup">
+        <h3>Edit Tasks</h3>
+        <table id="popupTable">
+            <thead>
+                <tr>
+                    <th>Employee</th>
+                    <th>Task</th>
+                    <th>Start Date</th>
+                    <th>End Date</th>
+                    <th>Remarks</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody id="taskList">
+                <!-- Task list will be dynamically inserted here -->
+            </tbody>
+        </table>
+        <button class="button" onclick="closePopup()">Close</button>
+    </div>
+
+    <div id="overlay" class="overlay" onclick="closePopup()"></div>
 
     <script>
-        function removeTask(taskId) {
-            const row = document.querySelector(`tr[data-task-id="${taskId}"]`);
+        let taskIdCounter = 1; // Initialize task ID counter
+
+        function onLoadFunction() {
+            console.log("Page has loaded.");
+            fetchDataFromLambda();
+        }
+
+        function fetchDataFromLambda() {
+            const apiUrl = 'https://0cyyhx4ika.execute-api.ap-south-1.amazonaws.com/S1/deepshikatest123';
+            fetch(apiUrl)
+                .then(response => response.text())
+                .then(data => {
+                    document.getElementById('data-container').innerHTML = data;
+                    populateTable();
+                })
+                .catch(error => {
+                    console.error('Error fetching data:', error);
+                    document.getElementById('data-container').innerHTML = 'Failed to load data. Please check the console for details.';
+                });
+        }
+
+        function populateTable() {
+            const tableBody = document.querySelector('#data-container table tbody');
+            if (!tableBody) {
+                console.error("Table body not found");
+                return;
+            }
+            const rows = tableBody.querySelectorAll('tr');
+            rows.forEach(row => {
+                const id = taskIdCounter++;
+                row.setAttribute('data-id', id);
+                const editButton = row.querySelector('button');
+                if (editButton) {
+                    editButton.setAttribute('onclick', `editTask(${id})`);
+                }
+            });
+        }
+
+        function showPopup() {
+            const taskTableBody = document.querySelector('#data-container table tbody');
+            const taskList = document.getElementById('taskList');
+            taskList.innerHTML = '';
+
+            const rows = taskTableBody.querySelectorAll('tr');
+            rows.forEach(row => {
+                const employee = row.cells[0].innerText;
+                const task = row.cells[1].innerText;
+                const startDate = row.cells[2].innerText;
+                const endDate = row.cells[3].innerText;
+                const remarks = row.cells[4].innerText;
+                const id = row.getAttribute('data-id');
+                
+                const taskHtml = `
+                    <tr data-id="${id}">
+                        <td>${employee}</td>
+                        <td>${task}</td>
+                        <td>${startDate}</td>
+                        <td>${endDate}</td>
+                        <td>${remarks}</td>
+                        <td><button class="remove-btn" onclick="removeTask(${id})">&times;</button></td>
+                    </tr>
+                `;
+                taskList.insertAdjacentHTML('beforeend', taskHtml);
+            });
+
+            document.getElementById('popup').style.display = 'block';
+            document.getElementById('overlay').style.display = 'block';
+        }
+
+        function closePopup() {
+            document.getElementById('popup').style.display = 'none';
+            document.getElementById('overlay').style.display = 'none';
+        }
+
+        function removeTask(id) {
+            const mainRow = document.querySelector(`#data-container table tbody tr[data-id="${id}"]`);
+            if (!mainRow) return;
+
             const taskDetails = {
-                employee: row.cells[0].innerText,
-                task: row.cells[1].innerText
+                employee: mainRow.cells[0].innerText,
+                task: mainRow.cells[1].innerText,
+                startDate: mainRow.cells[2].innerText,
+                endDate: mainRow.cells[3].innerText,
+                remarks: mainRow.cells[4].innerText
             };
 
-            const apiUrl = 'https://6z4vzlu3hb.execute-api.ap-south-1.amazonaws.com/default/Test4RT'; // Replace with your API Gateway URL
+            const apiUrl = 'https://eujo3ulg06.execute-api.ap-south-1.amazonaws.com/default/Test4RT';
 
             fetch(apiUrl, {
                 method: 'POST',
@@ -77,15 +199,14 @@
             .then(response => response.json())
             .then(data => {
                 if (data.success) {
-                    row.remove(); // Remove the row from the table if successful
-                    alert('Task removed successfully');
+                    mainRow.remove(); // Remove the row from the main table if successful
+                    document.querySelector(`#taskList tr[data-id="${id}"]`).remove(); // Remove from popup
                 } else {
-                    alert('Failed to remove task');
+                    alert('Failed to remove task.');
                 }
             })
             .catch(error => {
                 console.error('Error:', error);
-                alert('An error occurred while removing the task');
             });
         }
     </script>
