--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 remarks: mainRow.cells[4].innerText
             };
 
-            const apiUrl = 'https://i49kw2279e.execute-api.ap-south-1.amazonaws.com/default/Test4R';
+            const apiUrl = 'https://1yowx334wb.execute-api.ap-south-1.amazonaws.com/A1/Test4R';
 
             fetch(apiUrl, {
                 method: 'POST',
