--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task Manager</title>
+    <title>Employee Tasks</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -33,6 +33,7 @@
         .button:hover {
             background-color: #45a049;
         }
+        /* Popup styles */
         .popup {
             display: none;
             position: fixed;
@@ -44,9 +45,6 @@
             background-color: white;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             z-index: 1000;
-            max-width: 80%;
-            max-height: 80%;
-            overflow-y: auto;
         }
         .popup button {
             margin-top: 10px;
@@ -61,111 +59,73 @@
             background: rgba(0, 0, 0, 0.5);
             z-index: 999;
         }
-        .remove-btn {
-            color: red;
-            border: none;
-            background: none;
-            cursor: pointer;
-            font-size: 18px;
-            font-weight: bold;
-        }
     </style>
 </head>
-<body onload="onLoadFunction()">
-    <h1>Employee Task List</h1>
+
+    <body onload="onLoadFunction()">
+    <h1>Fetch Data from Lambda</h1>
     <div id="data-container">Loading data...</div>
 
     <br>
-    <button class="button" onclick="showPopup()">Edit Task</button>
+    <button class="button" onclick="showPopup()">Add Task</button>
 
+    <!-- Popup for adding tasks -->
     <div id="popup" class="popup">
-        <h3>Edit Tasks</h3>
-        <table id="popupTable">
-            <thead>
-                <tr>
-                    <th>Employee</th>
-                    <th>Task</th>
-                    <th>Start Date</th>
-                    <th>End Date</th>
-                    <th>Remarks</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody id="taskList">
-                <!-- Task list will be dynamically inserted here -->
-            </tbody>
-        </table>
-        <button class="button" onclick="closePopup()">Close</button>
+        <h3>Add New Task</h3>
+        <form id="taskForm" action="https://tfyct2zj8k.execute-api.ap-south-1.amazonaws.com/A1/test3" method="POST" enctype="application/x-www-form-urlencoded">
+            <label for="employeeName">Employee Name:</label>
+            <input type="text" id="employeeName" name="eName" value="Ramita" required><br><br>
+
+            <label for="taskDescription">Task:</label>
+            <input type="text" id="taskDescription" name="TaskDescription" required><br><br>
+
+            <label for="StartDate">Start Date:</label>
+            <input type="date" id="StartDate" name="StartDate"><br><br>
+
+            <label for="EndDate">End Date:</label>
+            <input type="date" id="EndDate" name="EndDate"><br><br>
+
+            <label for="Remarks">Remarks:</label>
+            <input type="text" id="Remarks" name="Remarks"><br><br>
+
+            <button class="button" type="submit">Add</button>
+            <button class="button" type="button" onclick="closePopup()">Cancel</button>
+        </form>
     </div>
 
+    <!-- Overlay for popup -->
     <div id="overlay" class="overlay" onclick="closePopup()"></div>
 
-    <script>
-        let taskIdCounter = 1; // Initialize task ID counter
+    <!-- Success message popup -->
+    <div id="messagePopup" class="popup">
+        <p id="messageContent"></p>
+        <button class="button" onclick="closeMessagePopup()">Close</button>
+    </div>
 
-        function onLoadFunction() {
+    <script>
+
+	function onLoadFunction() {
             console.log("Page has loaded.");
             fetchDataFromLambda();
         }
 
         function fetchDataFromLambda() {
             const apiUrl = 'https://0cyyhx4ika.execute-api.ap-south-1.amazonaws.com/S1/deepshikatest123';
+
             fetch(apiUrl)
-                .then(response => response.text())
+                .then(response => response.text())  // Use .text() to handle HTML response
                 .then(data => {
-                    document.getElementById('data-container').innerHTML = data;
-                    populateTable();
+                    console.log("Fetched HTML data:", data);
+                    document.getElementById('data-container').innerHTML = data;  // Insert HTML into the container
                 })
                 .catch(error => {
                     console.error('Error fetching data:', error);
-                    document.getElementById('data-container').innerHTML = 'Failed to load data. Please check the console for details.';
+                    const container = document.getElementById('data-container');
+                    container.innerHTML = 'Failed to load data. Please check the console for details.';
                 });
         }
 
-        function populateTable() {
-            const tableBody = document.querySelector('#data-container table tbody');
-            if (!tableBody) {
-                console.error("Table body not found");
-                return;
-            }
-            const rows = tableBody.querySelectorAll('tr');
-            rows.forEach(row => {
-                const id = taskIdCounter++;
-                row.setAttribute('data-id', id);
-                const editButton = row.querySelector('button');
-                if (editButton) {
-                    editButton.setAttribute('onclick', `editTask(${id})`);
-                }
-            });
-        }
-
         function showPopup() {
-            const taskTableBody = document.querySelector('#data-container table tbody');
-            const taskList = document.getElementById('taskList');
-            taskList.innerHTML = '';
-
-            const rows = taskTableBody.querySelectorAll('tr');
-            rows.forEach(row => {
-                const employee = row.cells[0].innerText;
-                const task = row.cells[1].innerText;
-                const startDate = row.cells[2].innerText;
-                const endDate = row.cells[3].innerText;
-                const remarks = row.cells[4].innerText;
-                const id = row.getAttribute('data-id');
-                
-                const taskHtml = `
-                    <tr data-id="${id}">
-                        <td>${employee}</td>
-                        <td>${task}</td>
-                        <td>${startDate}</td>
-                        <td>${endDate}</td>
-                        <td>${remarks}</td>
-                        <td><button class="remove-btn" onclick="removeTask(${id})">&times;</button></td>
-                    </tr>
-                `;
-                taskList.insertAdjacentHTML('beforeend', taskHtml);
-            });
-
             document.getElementById('popup').style.display = 'block';
             document.getElementById('overlay').style.display = 'block';
         }
@@ -175,39 +135,39 @@
             document.getElementById('overlay').style.display = 'none';
         }
 
-      function removeTask(id) {
-    const mainRow = document.querySelector(`#data-container table tbody tr[data-id="${id}"]`);
-    if (!mainRow) return;
+        function closeMessagePopup() {
+            document.getElementById('messagePopup').style.display = 'none';
+            document.getElementById('overlay').style.display = 'none';
+        }
 
-    const taskDetails = {
-        employee: mainRow.cells[0].innerText,
-        task: mainRow.cells[1].innerText,
-        startDate: mainRow.cells[2].innerText,
-        endDate: mainRow.cells[3].innerText,
-        remarks: mainRow.cells[4].innerText
-    };
+        document.getElementById('taskForm').onsubmit = async function(event) {
+            event.preventDefault(); // Prevent the default form submission
 
-    const apiUrl = 'https://1yowx334wb.execute-api.ap-south-1.amazonaws.com/A1/Test4R';
+            const form = event.target;
+            const formData = new FormData(form);
+            const params = new URLSearchParams(formData).toString();
 
-    fetch(apiUrl, {
-        method: 'POST',
-        mode: 'no-cors',  // Adding no-cors mode
-        headers: {
-            'Content-Type': 'application/json'
-        },
-        body: JSON.stringify(taskDetails)
-    })
-    .then(response => {
-        // Since 'no-cors' mode is enabled, you won't be able to check or read the response.
-        alert('Request sent to server. Task will be removed if server responds successfully.');
-        console.log(response);  // This won't contain the full response details.
-    })
-    .catch(error => {
-        console.error('Error:', error);
-        alert('Failed to remove task.');
-    });
-}
+            try {
+                const response = await fetch(form.action, {
+                    method: form.method,
+                    headers: {
+                        'Content-Type': form.enctype
+                    },
+                    body: params
+                });
 
+                const result = await response.json();
+                document.getElementById('messageContent').innerText = result.message;
+                document.getElementById('messagePopup').style.display = 'block';
+                document.getElementById('overlay').style.display = 'block';
+
+                closePopup(); // Close the add task popup
+            } catch (error) {
+                document.getElementById('messageContent').innerText = 'Error: ' + error.message;
+                document.getElementById('messagePopup').style.display = 'block';
+                document.getElementById('overlay').style.display = 'block';
+            }
+        };
     </script>
 </body>
 </html>
