--- a/index.html
+++ b/index.html
@@ -59,18 +59,24 @@
             background: rgba(0, 0, 0, 0.5);
             z-index: 999;
         }
+        select {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 10px;
+        }
     </style>
 </head>
 
-    <body onload="onLoadFunction()">
+<body onload="onLoadFunction()">
     <h1>Fetch Data from Lambda</h1>
     <div id="data-container">Loading data...</div>
 
     <br>
-    <button class="button" onclick="showPopup()">Add Task</button>
+    <button class="button" onclick="showAddTaskPopup()">Add Task</button>
+    <button class="button" onclick="showRemoveTaskPopup()">Remove Task</button>
 
     <!-- Popup for adding tasks -->
-    <div id="popup" class="popup">
+    <div id="addTaskPopup" class="popup">
         <h3>Add New Task</h3>
         <form id="taskForm" action="https://tfyct2zj8k.execute-api.ap-south-1.amazonaws.com/A1/test3" method="POST" enctype="application/x-www-form-urlencoded">
             <label for="employeeName">Employee Name:</label>
@@ -89,8 +95,18 @@
             <input type="text" id="Remarks" name="Remarks"><br><br>
 
             <button class="button" type="submit">Add</button>
-            <button class="button" type="button" onclick="closePopup()">Cancel</button>
+            <button class="button" type="button" onclick="closeAddTaskPopup()">Cancel</button>
         </form>
+    </div>
+
+    <!-- Popup for removing tasks -->
+    <div id="removeTaskPopup" class="popup">
+        <h3>Remove Task</h3>
+        <select id="taskSelect">
+            <option value="">Loading tasks...</option>
+        </select><br>
+        <button class="button" onclick="removeTask()">Remove</button>
+        <button class="button" type="button" onclick="closeRemoveTaskPopup()">Cancel</button>
     </div>
 
     <!-- Overlay for popup -->
@@ -103,8 +119,7 @@
     </div>
 
     <script>
-
-	function onLoadFunction() {
+        function onLoadFunction() {
             console.log("Page has loaded.");
             fetchDataFromLambda();
         }
@@ -125,19 +140,77 @@
                 });
         }
 
-        function showPopup() {
-            document.getElementById('popup').style.display = 'block';
+        function showAddTaskPopup() {
+            document.getElementById('addTaskPopup').style.display = 'block';
             document.getElementById('overlay').style.display = 'block';
         }
 
-        function closePopup() {
-            document.getElementById('popup').style.display = 'none';
+        function closeAddTaskPopup() {
+            document.getElementById('addTaskPopup').style.display = 'none';
             document.getElementById('overlay').style.display = 'none';
         }
 
-        function closeMessagePopup() {
-            document.getElementById('messagePopup').style.display = 'none';
+        function showRemoveTaskPopup() {
+            fetchTasksForRemoval();
+            document.getElementById('removeTaskPopup').style.display = 'block';
+            document.getElementById('overlay').style.display = 'block';
+        }
+
+        function closeRemoveTaskPopup() {
+            document.getElementById('removeTaskPopup').style.display = 'none';
             document.getElementById('overlay').style.display = 'none';
+        }
+
+        function fetchTasksForRemoval() {
+            const apiUrl = 'https://0cyyhx4ika.execute-api.ap-south-1.amazonaws.com/S1/tasks';  // Replace with your actual API
+
+            fetch(apiUrl)
+                .then(response => response.json())  // Assuming the API returns JSON
+                .then(data => {
+                    const select = document.getElementById('taskSelect');
+                    select.innerHTML = '<option value="">Select a task</option>';  // Clear existing options
+
+                    data.tasks.forEach(task => {
+                        const option = document.createElement('option');
+                        option.value = task.id;  // Assuming task has an id field
+                        option.textContent = task.description;  // Assuming task has a description field
+                        select.appendChild(option);
+                    });
+                })
+                .catch(error => {
+                    console.error('Error fetching tasks:', error);
+                    const select = document.getElementById('taskSelect');
+                    select.innerHTML = '<option value="">Failed to load tasks</option>';
+                });
+        }
+
+        function removeTask() {
+            const taskId = document.getElementById('taskSelect').value;
+
+            if (!taskId) {
+                alert('Please select a task to remove.');
+                return;
+            }
+
+            const apiUrl = `https://your-lambda-url/remove-task/${taskId}`;  // Replace with your actual Lambda function URL
+
+            fetch(apiUrl, {
+                method: 'DELETE',
+            })
+            .then(response => response.json())
+            .then(result => {
+                document.getElementById('messageContent').innerText = result.message || 'Task removed successfully.';
+                document.getElementById('messagePopup').style.display = 'block';
+                document.getElementById('overlay').style.display = 'block';
+
+                fetchDataFromLambda();  // Refresh the task list
+                closeRemoveTaskPopup(); // Close the remove task popup
+            })
+            .catch(error => {
+                document.getElementById('messageContent').innerText = 'Error: ' + error.message;
+                document.getElementById('messagePopup').style.display = 'block';
+                document.getElementById('overlay').style.display = 'block';
+            });
         }
 
         document.getElementById('taskForm').onsubmit = async function(event) {
@@ -161,7 +234,7 @@
                 document.getElementById('messagePopup').style.display = 'block';
                 document.getElementById('overlay').style.display = 'block';
 
-                closePopup(); // Close the add task popup
+                closeAddTaskPopup(); // Close the add task popup
             } catch (error) {
                 document.getElementById('messageContent').innerText = 'Error: ' + error.message;
                 document.getElementById('messagePopup').style.display = 'block';
