--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         }
 
         function fetchTasksForRemoval() {
-            const apiUrl = 'https://0cyyhx4ika.execute-api.ap-south-1.amazonaws.com/S1/tasks';  // Replace with your actual API
+            const apiUrl = 'https://0cyyhx4ika.execute-api.ap-south-1.amazonaws.com/S1/deepshikatest123';  // Replace with your actual API
 
             fetch(apiUrl)
                 .then(response => response.json())  // Assuming the API returns JSON
